--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "form-data": "^4.0.0"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.3",
+    "form-data": "^4.0.0",
+    "moment": "^2.30.1"
   }
 }
