--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,12 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.0",
     "form-data": "^4.0.0",
     "moment": "^2.30.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4"
   }
 }
