--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
     "form-data": "^4.0.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
