--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "express-useragent": "^1.0.15",
     "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
