--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.4.3",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "express-useragent": "^1.0.15",
     "form-data": "^4.0.0",
     "moment": "^2.30.1",
     "pg": "^8.12.0",
