--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.15",
+    "secure-random-string": "^1.1.3",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
