--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-rsa": "^1.1.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
